<resources>
    <string name="app_name">AdsOnBD</string>
    <string name="nav_title">AdsOnBD</string>
    <string name="nav_sub_title">App And Web Promotion</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="wp1" translatable="false">"Hi this is "</string>
    <string name="wp2" translatable="false">"I'm using your app "</string>
    <string name="isRTL">false</string>
    <string name="admob_id" translatable="false">ca-app-pub-1190937273143160~8363696205</string>
    <string name="facebook_app_id" translatable="false">542268970177292</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb542268970177292</string>
    <string name="facebook_client_token" translatable="false">bd1779edd377977a6a425c20bc8e2634</string>
    <string name="play_more_app" translatable="false">https://play.google.com/store/apps/developer?id=9042700353635011414</string>
    <string name="home">🏠 Home</string>
    <string name="homes">Home</string>
    <string name="category">Category</string>
    <string name="favorites">Favorites</string>
    <string name="my_download">My Download</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="upload_status">Upload Status</string>
    <string name="upload_quotes">Upload Quotes</string>
    <string name="upload_image">Upload Image</string>
    <string name="upload_gif">Upload Gif</string>
    <string name="upload_video">Upload Video</string>
    <string name="my_video">My Video</string>
    <string name="reward">Reward</string>
    <string name="reward_money">Reward Money</string>
    <string name="reference_code">Reference Code</string>
    <string name="earn_point">Earn point</string>
    <string name="rate_app">Rate App</string>
    <string name="more_app">More App</string>
    <string name="share_app">Share App</string>
    <string name="about_us">About Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="setting">Settings</string>
    <string name="contact_us">Contact Us</string>
    <string name="faq">Faq</string>
    <string name="action_logout">Logout</string>
    <string name="login">Login</string>
    <string name="status_saver">Whatsapp Status Saver</string>
    <string name="manage_status">manage your status</string>
    <string name="app_name_about_us">abcd</string>
    <string name="about_us_version">Version</string>
    <string name="about_us_version_text">1.0</string>
    <string name="about_us_author">Author</string>
    <string name="about_us_Company">Company</string>
    <string name="about_us_company_name">abcd</string>
    <string name="about_us_email">Email</string>
    <string name="about_us_email_text">abcd@abcd.com</string>
    <string name="about_us_website">Website</string>
    <string name="about_us_website_text">www.abcd.com</string>
    <string name="about_us_contact">Contact</string>
    <string name="about_us_contact_text">1234567890</string>
    <string name="about_us_about">About</string>
    <string name="congrats">"Congratulations you Won : "</string>
    <string name="ok">OK</string>
    <string name="exit">Exit</string>
    <string name="loading">Please wait....</string>
    <string name="no_data_found">No Data Found</string>
    <string name="allow_permission">Allow permission</string>
    <string name="failed_try_again">Failed try again</string>
    <string name="you_have_not_login">You have not login</string>
    <string name="logout_message">Are you sure you want to logout</string>
    <string name="wrong">Something went to wrong please try again later</string>
    <string name="internet_connection">Internet connection not available</string>
    <string name="allow_storage">Please allow external storage permission</string>
    <string name="Please_click_BACK_again_to_exit">Please click BACK again to exit</string>
    <string name="Let_me_recommend_you_this_application">Let me recommend you this application</string>
    <string name="cannot_use_save_permission">Can not use share, upload and download future allow storage permission</string>
    <string name="skip">Skip</string>
    <string name="got_it">GOT IT</string>
    <string name="welcome_title_one">App Installs</string>
    <string name="welcome_title_two">Play Games</string>
    <string name="welcome_title_three">Website Visit</string>
    <string name="welcome_description_one"><![CDATA[Install New App All Over The World And Enjoy the Latest Stuffs..]]></string>
    <string name="welcome_description_two"><![CDATA[Enjoy the 200+ Online HTML Games Of All Category for All Age Groups..]]></string>
    <string name="welcome_description_three">Explore New Websites Daily And Connect with the Know Whats Happening Around You.</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="button_text_login">LOGIN</string>
    <string name="button_text_skip">Skip</string>
    <string name="button_text_forgot_password">FORGOT PASSWORD ?</string>
    <string name="textView_forget_password">Forget your password ?</string>
    <string name="google_login">Gmail</string>
    <string name="facebook_login">Facebook</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="button_text_register">Register</string>
    <string name="name">Name</string>
    <string name="userName">♔ Name</string>
    <string name="phoneNo">Phone No</string>
    <string name="conform_password">Conform Password</string>
    <string name="already_have_an_account_yet">Already have an account yet ?</string>
    <string name="register_login_text">Login</string>
    <string name="submit">Submit</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="please_enter_phone">Please enter phone number</string>
    <string name="please_enter_full_name">Please enter full name</string>
    <string name="please_enter_message">Please enter message</string>
    <string name="forget_password">Forget password</string>
    <string name="forget_password_text">Enter your email address below and we\'ll send you email with instructions on how to change your password</string>
    <string name="remove_image">Remove Image</string>
    <string name="gallery">Gallery</string>
    <string name="change_pass">Change password</string>
    <string name="change_password">Change password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="new_conform_password">New Conform Password</string>
    <string name="please_enter_old_password">Please enter old password</string>
    <string name="please_enter_new_password">Please enter new password</string>
    <string name="please_enter_new_confirm_password">Please enter new confirm password</string>
    <string name="new_password_not_match">New password and new confirm password does not match</string>
    <string name="please_select_contact">Please select contact type</string>
    <string name="post">Post</string>
    <string name="title_verification">Enter Verification Code</string>
    <string name="enter_code">Enter code</string>
    <string name="opt_contain">We Have Send OTP On Your Email</string>
    <string name="please_enter_verification_code">Please enter verification code</string>
    <string name="verification_message">Verification code does not match</string>
    <string name="verify">verify</string>
    <string name="re_register">Register Again</string>
    <string name="resend_your_otp">Resend Your Otp</string>
    <string name="click_hear">Click Here</string>
    <string name="server_time_out">Server time out please try again use latest otp</string>
    <string name="value">0</string>
    <string name="youtube">Youtube</string>
    <string name="instagram">Instagram</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="on_review">On review</string>
    <string name="approved">Approved</string>
    <string name="not_following">You have not any user following</string>
    <string name="not_follower">You have not any user follow</string>
    <string name="you_have_not_onFollow">You cannot follow yourself</string>
    <string name="user_not_instagram_link">User has not added instagram profile link</string>
    <string name="user_not_youtube_link">User has not added youtube profile link</string>
    <string name="delete">Delete</string>
    <string name="delete_account">Delete Account</string>
    <string name="quote_status">Quotes status</string>
    <string name="image_status">Image status</string>
    <string name="gif_status">Gif status</string>
    <string name="video_status">Video status</string>
    <string name="pending_point">Pending Point</string>
    <string name="delete_my_account">Delete My Account</string>
    <string name="delete_des_dialog">If you want delete your account then the company will require your e-mail address for inquiry.</string>
    <string name="language_title">Select Your Language</string>
    <string name="language_des">In this app, You can select your the dearest language you see status. If you have not selected your dear language, then all languages are shown.</string>
    <string name="copy_text">Copy Text</string>
    <string name="tab_to_copy">Tap To Copy</string>
    <string name="your_reference_code">Your Reference Code</string>
    <string name="reference_code_detail">Share you reference code to others and earn more points.</string>
    <string name="download">Download</string>
    <string name="please_install_whatsapp">Please Install WhatsApp</string>
    <string name="please_install_instagram">Please Install Instagram</string>
    <string name="please_install_facebook">Please Install Facebook</string>
    <string name="please_install_fb_messenger">Please Install Facebook Messenger</string>
    <string name="please_install_twitter">Please Install Twitter</string>
    <string name="you_have_not_like_video">User cannot like their own videos</string>
    <string name="you_have_already_download_video">You have already download video</string>
    <string name="related_status">Related Status</string>
    <string name="all_comment">All Comment</string>
    <string name="please_enter_comment">Please enter comment</string>
    <string name="bottom_sheet_option_title">QUICK SHARE AND REPORT</string>
    <string name="report">Report</string>
    <string name="share_is_caring">Sharing is caring</string>
    <string name="copy">Copy</string>
    <string name="copy_sub">Copy quote</string>
    <string name="copy_quote">Copy quote</string>
    <string name="report_sub">Will check what\'s wrong</string>
    <string name="copyright">Copyright</string>
    <string name="add_thumbnail_file">+ Add Thumbnail File</string>
    <string name="full_name">Full Name</string>
    <string name="your_message">Your Message</string>
    <string name="attach_document">Please attach a photo of your ID</string>
    <string name="document_first_note">We need to authenticate your OnLooker account to verify your public image. Submitting a request does not allow your account to be analyzed. Authentication is mandatory for analysing.</string>
    <string name="document_note">We demand for photo ID basically name and date of birth i.e. government issued (e.g. passport, national identification card or driver’s license) or official business documents for analysing your request.</string>
    <string name="update">Update</string>
</resources>