<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background">

    <include
        android:id="@+id/toolbar"
        layout="@layout/row_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bannerAd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ll_main_av"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:paddingBottom="20dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView_title_av"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/app_name"
                android:textColor="@color/textView_title_av"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView_subTitle_av"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/document_first_note"
                android:textColor="@color/textView_sub_av"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_title_av" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInput_userName_av"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/name"
                android:textColorHint="@color/textView_hint_editPro"
                app:boxStrokeColor="@color/textView_box_select_color"
                app:hintTextColor="@color/textView_hint_layout_editPro"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_subTitle_av">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_userName_av"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="@color/editText_editPro"
                    android:theme="@style/editText_style" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInput_full_name_av"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/full_name"
                android:textColorHint="@color/textView_hint_editPro"
                app:boxStrokeColor="@color/textView_box_select_color"
                app:hintTextColor="@color/textView_hint_layout_editPro"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInput_userName_av">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_full_name_av"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="@color/editText_editPro"
                    android:theme="@style/editText_style" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInput_msg_av"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/your_message"
                android:textColorHint="@color/textView_hint_editPro"
                app:boxStrokeColor="@color/textView_box_select_color"
                app:hintTextColor="@color/textView_hint_layout_editPro"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInput_full_name_av">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_msg_av"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:maxLines="4"
                    android:minLines="4"
                    android:textColor="@color/editText_editPro"
                    android:theme="@style/editText_style" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView_attachDocument_av"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/attach_document"
                android:textColor="@color/textView_title_av"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInput_msg_av" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardView_imageUpload"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:clipToPadding="true"
                app:cardCornerRadius="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_attachDocument_av">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/con_image_av"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/textView_image_av"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="@string/add_thumbnail_file"
                        android:textColor="@color/textView_app_color"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/imageView_av"
                        android:layout_width="280dp"
                        android:layout_height="200dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:contentDescription="@string/app_name"
                        android:scaleType="fitXY"
                        android:src="@drawable/placeholder_portable"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView_image_av" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView_document_av"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/document_note"
                android:textColor="@color/textView_sub_av"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView_imageUpload" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_av"
                android:layout_width="140dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="20dp"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:backgroundTint="@color/button_bg"
                app:cornerRadius="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_document_av" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <include
        android:id="@+id/bannerAd"
        layout="@layout/banner_ad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>