<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/con_main_cp_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/view_cp_fragment"
                android:layout_width="0dp"
                android:layout_height="@dimen/margin_180"
                android:background="@drawable/toolbar_main"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageView_cp_fragment"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="@dimen/margin_30"
                android:contentDescription="@string/app_name"
                android:src="@drawable/profile"
                app:civ_border_color="@color/imageView_border_pro"
                app:civ_border_width="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView_name_cp_fragment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/textView_userName_editPro"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/view_cp_fragment"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView_cp_fragment" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInput_old_password_cp_fragment"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/old_password"
                android:textColorHint="@color/textView_hint_editPro"
                app:boxStrokeColor="@color/textView_box_select_color"
                app:hintTextColor="@color/textView_hint_layout_editPro"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view_cp_fragment">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_old_password_cp_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/gradient_border_vpn_card"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/textView_pro"
                    android:theme="@style/editText_style" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInput_password_cp_fragment"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/new_password"
                android:textColorHint="@color/textView_hint_editPro"
                app:boxStrokeColor="@color/textView_box_select_color"
                app:hintTextColor="@color/textView_hint_layout_editPro"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInput_old_password_cp_fragment">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_password_cp_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/gradient_border_vpn_card"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/textView_pro"
                    android:theme="@style/editText_style" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInput_confirm_password_cp_fragment"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/new_conform_password"
                android:textColorHint="@color/textView_hint_editPro"
                app:boxStrokeColor="@color/textView_box_select_color"
                app:hintTextColor="@color/textView_hint_layout_editPro"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInput_password_cp_fragment">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_confirm_password_cp_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/gradient_border_vpn_card"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/textView_pro"
                    android:theme="@style/editText_style" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_edit_cp_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="20dp"
                android:text="@string/update"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:backgroundTint="@color/button_bg"
                app:cornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInput_confirm_password_cp_fragment"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar_cp_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/ProgressBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        layout="@layout/no_data_found"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>